Email Address changed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Want to connect? Reach me at <a href="mailto:corwomack2010@gmail.com">corwomack2010@gmail.com</a></p>
+    <p>Want to connect? Reach me at <a href="mailto:verxus0@gmail.com">verxus0@gmail.com</a></p>
     <div class="socials">
       <a href="https://github.com/FliperTail" target="_blank">GitHub</a> |
       <a href="https://discord.gg/7PSThGbPab" target="_blank">Discord</a> |
@@ -89,3 +89,4 @@
   </footer>
 </body>
 </html>
+
