--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
       <h3>GlobalStrike</h3>
       <p>A Minecraft global event system plugin with custom events and happens at random times. (Work in Progress)</p>
     </a>
+    <a href="about:blank" class="project-card" target="_blank">
+      <h3>RomeMafia</h3>
+      <p>A Mafia game set in Romain times. With all of the roles reflecting off of Rome. (Work in Progress)</p>
+    </a>
   </div>
 </section>
 
@@ -89,4 +93,5 @@
   </footer>
 </body>
 </html>
+
 
