--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
       <h3>RomeMafia</h3>
       <p>A Mafia game set in Romain times. With all of the roles reflecting off of Rome. (Work in Progress)</p>
     </a>
+    <a href="https://github.com/Voxelra/Veinminerplus" class="project-card" target="_blank">
+      <h3>Veinminer+</h3>
+      <p>A plugin for 1.12.2 that allows you to veinminer any ores with enchantment support so unbreaking works!</p>
+    </a>
   </div>
 </section>
 
@@ -93,5 +97,6 @@
   </footer>
 </body>
 </html>
+
 
 
